<resources>
    <string name="app_name">App Compras</string>
    <string name="email">  E-mail</string>
    <string name="password">  Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="facebook_app_id">3786100588184277</string>
    <string name="fb_login_protocol_scheme">fb3786100588184277</string>
    <string name="prefs_file">editor.putString("email", homeIntent.getStringExtra(AuthActivity.KEY_EMAIL));</string>
    <string name="fallo_login">Fallo de Login</string>
    <string name="fallo_login_desc">Ha ocurrido un fallo al tratar de ingresar en la aplicación.</string>
    <string name="google">Inicia sesión con Google</string>
    <string name="facebook">Inicia sesión con Facebook</string>
    <string name="olvidado_contra">¿Has olvidado tu contraseña?</string>
    <string name="recuperar">Recuperar</string>
    <string name="autentificacion">Autentificación</string>
    <string name="contraseña_verificar">Comprueba contraseña</string>
    <string name="registro">Registro</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sesion_app">Iniciar sesión o registrarse</string>
    <string name="carrito">Carrito</string>
    <string name="total">Total</string>
    <string name="calicart">Calicart</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="misListas">Mis listas</string>
    <string name="frutasyVerduras">Frutas y verduras</string>
    <string name="carnesymariscos">Carnes y mariscos</string>
    <string name="vestimenta">Vestimenta</string>
    <string name="bebidas">Bebidas</string>
    <string name="electronica">Electronica</string>
    <string name="productosHogar">Productos del hogar</string>
    <string name="limpiezaPapeleria">Limpieza y papeleria</string>
    <string name="saludBelleza">Higiene, salud y belleza</string>
    <string name="higiene">Higiene</string>
    <string name="mascotas">Mascotas</string>
    <string name="lacteoHuevo">Lacteos y huevos</string>
    <string name="abarrotes">Abarrotes</string>
    <string name="panaderia">Panaderia</string>
    <string name="fechaCreación">Fecha</string>
    <string name="tituloLista">Lista</string>
    <string name="nombreProducto">Nombre del producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="agregarALista">Agregar a la lista</string>
    <string name="jugetesyDeportes">Juguetes y deportes</string>
    <string name="vinosyLicores">Vinos y licores</string>
    <string name="categorias">"Categorías "</string>
    <string name="chedraui">Chedraui</string>
    <string name="walmart">Walmart</string>
    <string name="soriana">Soriana</string>
    <string name="añadirALista">Añadir producto a una lista</string>
    <string name="seleccionLista">Seleccione la lista en la que desea añadir el producto</string>
    <string name="crearLista">Crear lista</string>
    <string name="guardarLista">Guardar lista</string>
    <string name="productosDeLista">Productos de tu lista</string>
    <string name="totalChedraui">Total chedraui</string>
    <string name="totalWalmart">Total walmart</string>
    <string name="totalSoriana">Total soriana</string>
    <string name="medida">Medida:</string>
</resources>